refactor: for fixing formatter i need to change parser